@@ -1,6 +1,8 @@
 package com.neritech.saas.ordemservico.service;
 
+import com.neritech.saas.common.tenancy.TenantAccess;
 import com.neritech.saas.ordemservico.domain.Diagnostico;
+import com.neritech.saas.ordemservico.domain.OrdemServico;
 import com.neritech.saas.ordemservico.dto.DiagnosticoRequest;
 import com.neritech.saas.ordemservico.dto.DiagnosticoResponse;
 import com.neritech.saas.ordemservico.mapper.DiagnosticoMapper;
@@ -9,8 +11,8 @@ import com.neritech.saas.ordemservico.repository.OrdemServicoRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -20,7 +22,9 @@ public class DiagnosticoService {
     private final OrdemServicoRepository ordemServicoRepository;
     private final DiagnosticoMapper mapper;
 
-    public DiagnosticoService(DiagnosticoRepository repository, OrdemServicoRepository ordemServicoRepository,
+    public DiagnosticoService(
+            DiagnosticoRepository repository,
+            OrdemServicoRepository ordemServicoRepository,
             DiagnosticoMapper mapper) {
         this.repository = repository;
         this.ordemServicoRepository = ordemServicoRepository;
@@ -28,39 +32,53 @@ public class DiagnosticoService {
     }
 
     public DiagnosticoResponse create(DiagnosticoRequest request) {
+        Long tenantId = TenantAccess.requireCurrentTenant();
+        OrdemServico ordemServico = requireOwnedOrder(request.ordemServicoId(), tenantId);
+
         Diagnostico entity = mapper.toEntity(request);
-        entity.setOrdemServico(ordemServicoRepository.findById(request.ordemServicoId())
-                .orElseThrow(() -> new EntityNotFoundException("Ordem de ServiÃ§o nÃ£o encontrada")));
-        Diagnostico saved = repository.save(entity);
-        return mapper.toResponse(saved);
+        entity.setOrdemServico(ordemServico);
+        return mapper.toResponse(repository.save(entity));
     }
 
     @Transactional(readOnly = true)
     public DiagnosticoResponse findById(Long id) {
-        Diagnostico entity = repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("DiagnÃ³stico nÃ£o encontrado"));
-        return mapper.toResponse(entity);
+        Long tenantId = TenantAccess.requireCurrentTenant();
+        return mapper.toResponse(requireOwnedDiagnostico(id, tenantId));
     }
 
     @Transactional(readOnly = true)
     public List<DiagnosticoResponse> findByOrdemServicoId(Long ordemServicoId) {
-        return repository.findByOrdemServicoId(ordemServicoId).stream()
+        Long tenantId = TenantAccess.requireCurrentTenant();
+        requireOwnedOrder(ordemServicoId, tenantId);
+        return repository.findByOrdemServico_IdAndOrdemServico_EmpresaId(ordemServicoId, tenantId).stream()
                 .map(mapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public DiagnosticoResponse update(Long id, DiagnosticoRequest request) {
-        Diagnostico entity = repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("DiagnÃ³stico nÃ£o encontrado"));
+        Long tenantId = TenantAccess.requireCurrentTenant();
+        Diagnostico entity = requireOwnedDiagnostico(id, tenantId);
+        OrdemServico ordemServico = requireOwnedOrder(request.ordemServicoId(), tenantId);
+
         mapper.updateEntityFromRequest(request, entity);
-        Diagnostico updated = repository.save(entity);
-        return mapper.toResponse(updated);
+        entity.setOrdemServico(ordemServico);
+        return mapper.toResponse(repository.save(entity));
     }
 
     public void delete(Long id) {
-        if (!repository.existsById(id)) {
-            throw new EntityNotFoundException("DiagnÃ³stico nÃ£o encontrado");
-        }
-        repository.deleteById(id);
+        Long tenantId = TenantAccess.requireCurrentTenant();
+        repository.delete(requireOwnedDiagnostico(id, tenantId));
+    }
+
+    private OrdemServico requireOwnedOrder(Long ordemServicoId, Long tenantId) {
+        return ordemServicoRepository.findByIdAndEmpresaId(ordemServicoId, tenantId)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Ordem de serviço não encontrada para a empresa autenticada"));
+    }
+
+    private Diagnostico requireOwnedDiagnostico(Long id, Long tenantId) {
+        return repository.findByIdAndOrdemServico_EmpresaId(id, tenantId)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Diagnóstico não encontrado para a empresa autenticada"));
     }
 }
